Added display flex to carousel-item.active so cards would display horizontally

--- a/data/static/assets/css/index.css
+++ b/data/static/assets/css/index.css
@@ -1,9 +1,17 @@
-@media (min-width:768px) {
+@media (min-width: 768px) {
   .text-md-right {
-    text-align: left!important;
+    text-align: left !important;
   }
 }
 
 .card-deck {
   margin: 0 auto;
+}
+
+.card-title {
+  text-align: center;
+}
+
+.carousel-item.active {
+  display: flex;
 }
