--- a/data/static/assets/css/index.css
+++ b/data/static/assets/css/index.css
@@ -12,6 +12,25 @@
   text-align: center;
 }
 
-.carousel-item.active {
-  display: flex;
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
 }
+
+a.btn.btn-primary {
+  margin-top: 20px;
+}
+
+a.btn.btn-secondary {
+  margin-top: 20px;
+  float: right;
+}
+
+@media screen and (max-width: 1000px) {
+  a.btn.btn-secondary {
+    margin-top: 20px;
+    float: left;
+  }
+}
+
