Fixed arrows to be on each side of carousel. Made 9 different cards with same pictures

--- a/data/static/assets/css/index.css
+++ b/data/static/assets/css/index.css
@@ -34,3 +34,11 @@ a.btn.btn-secondary {
   }
 }
 
+.carousel-multi-item {
+  display: flex;
+}
+
+.controls-top {
+  display: flex;
+  align-items: center;
+}
