pushing jinja updated c.html file

--- a/web_flask/templates/c.html
+++ b/web_flask/templates/c.html
@@ -160,10 +160,10 @@
 					  <div class="row">
 						<div class="col-md-4">
 						  <div class="card mb-2">
-							<img class="card-img-top" src="static/img/hiking.jpg"
+							<img class="card-img-top" src="static/img/fishing.jpg"
 							  alt="Card image cap">
 							<div class="card-body">
-							  <h4 class="card-title">Archery</h4>
+							  <h4 class="card-title">Fishing</h4>
 							  <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
 								card's content.</p> -->
 								<a class="btn btn-primary" href="#" role="button">Find Friendz!</a>
@@ -177,7 +177,7 @@
 							<img class="card-img-top" src="static/img/fishing.jpg"
 							  alt="Card image cap">
 							<div class="card-body">
-							  <h4 class="card-title">Beekeeping</h4>
+							  <h4 class="card-title">Fishing</h4>
 							  <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
 								card's content.</p> -->
 								<a class="btn btn-primary" href="#" role="button">Find Friendz!</a>
@@ -188,10 +188,10 @@
 
 						<div class="col-md-4 clearfix d-none d-md-block">
 						  <div class="card mb-2">
-							<img class="card-img-top" src="static/img/rock_climbing.jpg"
+							<img class="card-img-top" src="static/img/fishing.jpg"
 							  alt="Card image cap">
 							<div class="card-body">
-							  <h4 class="card-title">Camping</h4>
+							  <h4 class="card-title">Fishing</h4>
 							  <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
 								card's content.</p> -->
 								<a class="btn btn-primary" href="#" role="button">Find Friendz!</a>
@@ -210,7 +210,8 @@
 							{% for interest in interests %}
 							<div class="col-md-4">
 								<div class="card mb-2">
-									<img class="card-img-top" src="static/img/hiking.jpg" alt="Card image cap">
+									{% set image_string = 'static/img/interests/' ~ interest.id ~ '.jpg' %}
+									<img class="card-img-top" src="{{ image_string }}" alt="Card image cap">
 									<div class="card-body">
 										<h4 class="card-title">{{ interest.name }}</h4>
 										<!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -258,7 +259,7 @@
 						<div class="row">
 							<div class="col-md-4">
 								<div class="card mb-2">
-									<img class="card-img-top" src="static/img/hiking.jpg" alt="Card image cap">
+									<img class="card-img-top" src="static/img/fishing.jpg" alt="Card image cap">
 									<div class="card-body">
 										<h4 class="card-title">Hiking</h4>
 										<!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -284,7 +285,7 @@
 
 							<div class="col-md-4 clearfix d-none d-md-block">
 								<div class="card mb-2">
-									<img class="card-img-top" src="static/img/rock_climbing.jpg" alt="Card image cap">
+									<img class="card-img-top" src="static/img/fishing.jpg" alt="Card image cap">
 									<div class="card-body">
 										<h4 class="card-title">Rock Climbing</h4>
 										<!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
