--- a/web_flask/templates/home.html
+++ b/web_flask/templates/home.html
@@ -4,7 +4,7 @@
 
     <!-- heading for carousel -->
 
-    <h2 class="text-center">Find your friends</h2>
+    <h2 class="text-center">Find Friendz</h2>
     <!-- <p class="font-weight-bold">Bootstrap carousel multiple items is an improved version of the standard bootstrap
   carousel which allows you to put inside more than one element.</p>
 
@@ -45,8 +45,6 @@
                             <img class="card-img-top" src="{{ image_string }}" alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title">{{ interest.name }}</h4>
-                                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                                    card's content.</p> -->
                                 <a class="btn btn-primary" href="#" role="button">Find Friendz!</a>
                                 <a class="btn btn-secondary" href="#" role="button">More Info</a>
                             </div>
