--- a/web_flask/templates/layout.html
+++ b/web_flask/templates/layout.html
@@ -4,12 +4,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-	<title>Dashboard - Brand</title>
-	<link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
+	<title>Friendzy</title>
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-	<link rel="stylesheet" href="static/fonts/fontawesome-all.min.css">
-	<link rel="stylesheet" href="static/css/index.css">
+	<link rel="stylesheet" href="{{ url_for('static', filename = 'bootstrap/css/bootstrap.min.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename = 'fonts/fontawesome-all.min.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename = 'css/index.css') }}">
 </head>
 
 <body id="page-top">
@@ -103,7 +103,7 @@
 										<h6 class="dropdown-header">messages</h6>
 										<a class="d-flex align-items-center dropdown-item" href="#">
 											<div class="dropdown-list-image mr-3"><img class="rounded-circle"
-													src="static/img/avatars/avatar4.jpeg">
+													src="{{ url_for('static', filename = 'img/avatars/avatar4.jpeg') }}">
 												<div class="bg-success status-indicator"></div>
 											</div>
 											<div class="font-weight-bold">
@@ -114,7 +114,7 @@
 										</a>
 										<a class="d-flex align-items-center dropdown-item" href="#">
 											<div class="dropdown-list-image mr-3"><img class="rounded-circle"
-													src="static/img/avatars/avatar2.jpeg">
+													src="{{ url_for('static', filename = 'img/avatars/avatar2.jpeg') }}">
 												<div class="status-indicator"></div>
 											</div>
 											<div class="font-weight-bold">
@@ -125,7 +125,7 @@
 										</a>
 										<a class="d-flex align-items-center dropdown-item" href="#">
 											<div class="dropdown-list-image mr-3"><img class="rounded-circle"
-													src="static/img/avatars/avatar3.jpeg">
+													src="{{ url_for('static', filename = 'img/avatars/avatar3.jpeg') }}">
 												<div class="bg-warning status-indicator"></div>
 											</div>
 											<div class="font-weight-bold">
@@ -147,7 +147,7 @@
 										data-toggle="dropdown" aria-expanded="false" href="#"><span
 											class="d-none d-lg-inline mr-2 text-gray-600 small">User Name</span><img
 											class="border rounded-circle img-profile"
-											src="static/img/avatars/avatar1.jpeg"></a>
+											src="{{ url_for('static', filename = 'img/avatars/avatar1.jpeg') }}"></a>
 									<div class="dropdown-menu shadow dropdown-menu-right animated--grow-in" role="menu">
 										<a class="dropdown-item" role="presentation" href="#"><i
 												class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a><a
@@ -164,8 +164,8 @@
 							</li>
 						</ul>
 					</div>
-                </nav>
-                {% block content %}{% endblock %}
+				</nav>
+				{% block content %}{% endblock %}
 			</div>
 			<footer class="bg-white sticky-footer">
 				<div class="container my-auto">
@@ -173,12 +173,12 @@
 				</div>
 			</footer>
 		</div>
-    </div>
-    <script src="static/js/jquery.min.js"></script>
-	<script src="static/bootstrap/js/bootstrap.min.js"></script>
+	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-    <script src="static/js/theme.js"></script>
-    <script src="static/js/carousel.js"></script>
+	<script src="{{ url_for('static', filename = 'js/jquery.min.js') }}"></script>
+	<script src="{{ url_for('static', filename = 'bootstrap/js/bootstrap.min.js') }}"></script>
+	<script src="{{ url_for('static', filename = 'js/theme.js') }}"></script>
+	<script src="{{ url_for('static', filename = 'js/carousel.js') }}"></script>
 </body>
 
 </html>
