Added logic to base_model to readd interest names to user. Added unordered list of interests to Jinja template for user cards. Fixed script errors in browser console from layout.html and downloaded jquery.easing.js to static folder

--- a/web_flask/templates/layout.html
+++ b/web_flask/templates/layout.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename = 'bootstrap/css/bootstrap.min.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename = 'fonts/fontawesome-all.min.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename = 'css/index.css') }}">
+	<link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename = 'img/laugh-wink-solid.ico') }}" />
 </head>
 
 <body id="page-top">
@@ -174,8 +175,8 @@
 			</footer>
 		</div>
 	</div>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
 	<script src="{{ url_for('static', filename = 'js/jquery.min.js') }}"></script>
+	<script src="{{ url_for('static', filename = 'js/jquery.easing.js') }}"></script>
 	<script src="{{ url_for('static', filename = 'bootstrap/js/bootstrap.min.js') }}"></script>
 	<script src="{{ url_for('static', filename = 'js/theme.js') }}"></script>
 	<script src="{{ url_for('static', filename = 'js/carousel.js') }}"></script>
