--- a/web_flask/static/css/index.css
+++ b/web_flask/static/css/index.css
@@ -42,3 +42,38 @@ a.btn.btn-secondary {
   display: flex;
   align-items: center;
 }
+
+.social-icons {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.social-icons img:hover {
+  opacity: 0.7;
+}
+
+.fa {
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-twitter {
+  background: #55acee;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-facebook {
+  background: #3b5998;
+  color: white;
+}
