--- a/web_flask/templates/layout.html
+++ b/web_flask/templates/layout.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename = 'bootstrap/css/bootstrap.min.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename = 'fonts/fontawesome-all.min.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename = 'css/index.css') }}">
-	<link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename = 'img/laugh-wink-solid.ico') }}" />
+	<link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename = 'img/icons/laugh-wink-solid.svg') }}" />
 </head>
 
 <body id="page-top">
