--- a/web_flask/templates/home.html
+++ b/web_flask/templates/home.html
@@ -38,7 +38,8 @@
 							<img class="card-img-top" src="{{ url_for('static', filename = 'img/interests/' ~ interest.id ~ '.jpg') }}" alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title">{{ interest.name }}</h4>
-                                <a class="btn btn-primary" href="http://127.0.0.1:5000/users_search/{{ interest.id }}" role="button">Find Friendz!</a>
+				<!-- Change href on server to 35.193.115.163/users_search/-->
+                                <a class="btn btn-primary" href={{ url_for('users_search_list/' ~ interest.id) }} role="button">Find Friendz!</a>
                                 <a class="btn btn-secondary" href="#" role="button">More Info</a>
                             </div>
                         </div>
