--- a/web_flask/templates/layout.html
+++ b/web_flask/templates/layout.html
@@ -17,7 +17,7 @@
 	<div id="wrapper">
 		<nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
 			<div class="container-fluid d-flex flex-column p-0">
-				<a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="http://127.0.0.1:5000/interests_list">
+				<a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href={{ url_for('interests_list') }}>
 					<div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-laugh-wink"></i></div>
 					<div class="sidebar-brand-text mx-3"><span>FRIENDZY</span></div>
 				</a>
