--- a/web_flask/static/css/index.css
+++ b/web_flask/static/css/index.css
@@ -77,3 +77,18 @@ a.btn.btn-secondary {
   background: #3b5998;
   color: white;
 }
+
+.interest-card {
+  text-decoration: none;
+  color: black;
+}
+
+.interest-card:hover {
+  text-decoration: none;
+  color: black;
+  opacity: 0.7;
+}
+
+body {
+  color: black;
+}
