--- a/web_flask/templates/home.html
+++ b/web_flask/templates/home.html
@@ -35,13 +35,14 @@
                     {% for interest in list %}
                     <div class="col-md-4">
                         <div class="card mb-2">
+							<!-- Change href on server to 35.193.115.163/users_search/-->
+							<a class="interest-card" href="{{ url_for('users_search_list', interest_id=interest.id) }}">
 							<img class="card-img-top" src="{{ url_for('static', filename = 'img/interests/' ~ interest.id ~ '.jpg') }}" alt="Card image cap">
                             <div class="card-body">
-                                <h4 class="card-title">{{ interest.name }}</h4>
-				<!-- Change href on server to 35.193.115.163/users_search/-->
-                                <a class="btn btn-primary" href={{ url_for('users_search_list', interest_id=interest.id) }} role="button">Find Friendz!</a>
-                                <a class="btn btn-secondary" href="#" role="button">More Info</a>
-                            </div>
+								<h4 class="card-title">{{ interest.name }}</h4>
+								<p>{{ interest.description }}</p>
+							</div>
+							</a>
                         </div>
                     </div>
                     {% endfor %}
