Updated all files to add interest randomizer. Added API endpoint to fetch interest by id. Commented out API endpoint to fetch by name

--- a/web_flask/templates/layout.html
+++ b/web_flask/templates/layout.html
@@ -43,11 +43,13 @@
 					<div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle mr-3"
 							id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
 						<form
-							class="form-inline d-none d-sm-inline-block mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+							class="form-inline d-none d-sm-inline-block mr-auto ml-md-3 my-2 my-md-0 mw-100">
 							<div class="input-group"><input id="search_text" class="bg-light form-control border-0 small autocomplete" type="text"
 									placeholder="Search by interest...">
 								<div class="input-group-append"><button id="search_button" class="btn btn-primary py-0" type="button"><i
 											class="fas fa-search"></i></button></div>
+								<div class="input-group-append"><button id="random_button" class="btn btn-secondary py-0" type="button"><i
+											class="fas fa-dice"></i> Roll the Dice</button></div>
 							</div>
 						</form>
 						<ul class="nav navbar-nav flex-nowrap ml-auto">
