--- a/web_flask/templates/users.html
+++ b/web_flask/templates/users.html
@@ -3,7 +3,7 @@
 <div class="container my-4">
 
 	<!-- heading for carousel -->
-	<h2 class="text-center">New Friendz</h2>
+	<h2 class="text-center">New Friendz in {{ interest_name }}</h2>
 
 	<hr class="my-4">
 
