--- a/web_flask/templates/register.html
+++ b/web_flask/templates/register.html
@@ -5,39 +5,96 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Register - Brand</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="static/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="static/css/index.css">
 </head>
 
 <body class="bg-gradient-primary">
     <div class="container">
+        {% for message in get_flashed_messages() %}
+      <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+      </div>
+    {% endfor %}
         <div class="card shadow-lg o-hidden border-0 my-5">
             <div class="card-body p-0">
                 <div class="row">
                     <div class="col-lg-5 d-none d-lg-flex">
-                        <div class="flex-grow-1 bg-register-image" style="background-image: url(&quot;assets/img/dogs/image2.jpeg&quot;);"></div>
+                        <div class="flex-grow-1 bg-register-image" style="background-image: url(&quot;static/img/dogs/image2.jpeg&quot;);"></div>
                     </div>
                     <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
                                 <h4 class="text-dark mb-4">Create an Account!</h4>
                             </div>
-                            <form class="user">
+                            <form method="POST" action="/signup">
+                                {{ form.csrf_token }}
                                 <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user" type="text" id="exampleFirstName" placeholder="First Name" name="first_name"></div>
-                                    <div class="col-sm-6"><input class="form-control form-control-user" type="text" id="exampleFirstName" placeholder="Last Name" name="last_name"></div>
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <fieldset class="first_name">
+                                        {{ form.first_name(placeholder='Enter First Name') }}
+                                        {% if form.first_name.errors %}
+                                          <ul class="errors">
+                                            {% for error in form.email.errors %}
+                                              <li>{{ error }}</li>{% endfor %}
+                                          </ul>
+                                        {% endif %}
+                                      </fieldset>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <fieldset class="last_name">
+                                            {{ form.last_name(placeholder='Enter Last Name') }}
+                                            {% if form.last_name.errors %}
+                                              <ul class="errors">
+                                                {% for error in form.email.errors %}
+                                                  <li>{{ error }}</li>{% endfor %}
+                                              </ul>
+                                            {% endif %}
+                                          </fieldset>
+                                    </div>
                                 </div>
-                                <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Email Address" name="email"></div>
+                                <div class="form-group">
+                                    <fieldset class="email">
+                                        {{ form.email(placeholder='Enter Email') }}
+                                        {% if form.email.errors %}
+                                          <ul class="errors">
+                                            {% for error in form.email.errors %}
+                                              <li>{{ error }}</li>{% endfor %}
+                                          </ul>
+                                        {% endif %}
+                                      </fieldset>
+                                </div>
                                 <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user" type="password" id="examplePasswordInput" placeholder="Password" name="password"></div>
-                                    <div class="col-sm-6"><input class="form-control form-control-user" type="password" id="exampleRepeatPasswordInput" placeholder="Repeat Password" name="password_repeat"></div>
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <fieldset class="password">
+                                            {{ form.password(placeholder='Enter Password') }}
+                                            {% if form.password.errors %}
+                                              <ul class="errors">
+                                                {% for error in form.password.errors %}
+                                                  <li>{{ error }}</li>{% endfor %}
+                                              </ul>
+                                            {% endif %}
+                                          </fieldset>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <fieldset class="confirm">
+                                            {{ form.confirm(placeholder='Confirm Password') }}
+                                            {% if form.confirm.errors %}
+                                              <ul class="errors">
+                                                {% for error in form.confirm.errors %}
+                                                  <li>{{ error }}</li>{% endfor %}
+                                              </ul>
+                                            {% endif %}
+                                          </fieldset>
+                                    </div>
                                 </div><button class="btn btn-primary btn-block text-white btn-user" type="submit">Register Account</button>
                                 <hr><a class="btn btn-primary btn-block text-white btn-google btn-user" role="button"><i class="fab fa-google"></i>&nbsp; Register with Google</a><a class="btn btn-primary btn-block text-white btn-facebook btn-user" role="button"><i class="fab fa-facebook-f"></i>&nbsp; Register with Facebook</a>
                                 <hr>
                             </form>
-                            <div class="text-center"><a class="small" href="forgot-password.html">Forgot Password?</a></div>
+                            <div class="text-center"><a class="small" href="#">Forgot Password?</a></div>
                             <div class="text-center"><a class="small" href="login.html">Already have an account? Login!</a></div>
                         </div>
                     </div>
@@ -45,10 +102,10 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/js/jquery.min.js"></script>
+    <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-    <script src="assets/js/theme.js"></script>
+    <script src="static/js/theme.js"></script>
 </body>
 
 </html>
