Made sidebar links dynamic. Added routes for sidebar links Profile and Friends in users_search.py. Fixed templates for sidebar pages

--- a/web_flask/static/css/index.css
+++ b/web_flask/static/css/index.css
@@ -94,6 +94,10 @@ body {
 }
 
 button.link {
-  background:none;
-  border:none;
+  background: none;
+  border: none;
+}
+
+button.link:hover {
+  opacity: 0.7;
 }
