--- a/web_flask/templates/layout.html
+++ b/web_flask/templates/layout.html
@@ -26,12 +26,12 @@
 				</a>
 				<hr class="sidebar-divider my-0">
 				<ul class="nav navbar-nav text-light" id="accordionSidebar">
-					<li class="nav-item" role="presentation"><a class="nav-link active" href="index.html"><i
+					<li class="nav-item" role="presentation"><a class="nav-link active" href={{ url_for('interests_list') }}><i
 								class="fas fa-running"></i><span>Activities</span></a></li>
-					<li class="nav-item" role="presentation"><a class="nav-link" href="profile.html"><i
+					<li class="nav-item" role="presentation"><a class="nav-link" href={{ url_for('user_profile') }}><i
 								class="fas fa-user"></i><span>Profile</span></a></li>
 					<li class="nav-item" role="presentation"></li>
-					<li class="nav-item" role="presentation"><a class="nav-link" href="table.html"><i
+					<li class="nav-item" role="presentation"><a class="nav-link" href={{ url_for('user_friends') }}><i
 								class="fas fa-user-friends"></i><span>Friends</span></a></li>
 					<li class="nav-item" role="presentation"></li>
 				</ul>
